fix: removing little bit of extra space at top

--- a/assets/styles/page-anchor.scss
+++ b/assets/styles/page-anchor.scss
@@ -6,5 +6,10 @@
 
   .page-anchor.ftva {
     margin-bottom: 0; // remove extra space at bottom of sidebar for page anchor
+
+    .page-anchor-content {
+      padding-bottom: 0;
+      padding-top: 0;
+    }
   }
 }
